fix align

--- a/profile/profilePage_css.css
+++ b/profile/profilePage_css.css
@@ -24,10 +24,13 @@ h3 {
   width : 100%;
   height : 300px;
   color : #eee;
+  z-index : 5;
 }
 
 .button {
 	position : absolute;
+	width : 40px;
+	height : 40px;
 	top : 40%;
 	left : 0%;
 }
@@ -39,7 +42,7 @@ h3 {
 	background-image : url(./profile1.png);
 	position : relative;
 	top : 0%;
-	left : 20px;
+	left : 50px;
 	height : 250px;
 	width : 250px;
 }
@@ -47,18 +50,20 @@ h3 {
 .profileText {
 	position : absolute;
 	top : 0%;
-	left : 250px;
+	left : 280px;
 }
 
 #backButton {
   font-size: 40px;
   background-color :#3E606F;
+  width : 100%;
+  height : 100%;
+  position : absolute;
   color: #eee;
   display: inline-block;
   border : none;
   outline : none;
-  position : absolute;
-  top : 15px;
+  z-index : 1;
 }
 
 #backbutton:hover{
@@ -75,13 +80,17 @@ h3 {
   background : #ffffff;
   border-radius : 0.5em;
   padding : 3px 10px;
+  z-index : 1;
 }
 
+#homeButton:hover{
+	background-color : #EEEEEE;
+}
 .homeButtonPart {
   width : 5%;
   position : absolute;
   top : 5%;
-  right : 2%;
+  right : 0%;
 }
 
 .main {
